--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
-https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina/main/tw-11134207-7r98o-lw75tbtzwze811.webp
+<img src="https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina/main/tw-11134207-7r98o-lw75tbtzwze811.webp">
 CPU	Intel Core i5-2450M
 GPU	Intel HD Graphics 3000
