--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
-![image](https://github.com/tssin/Lenvo-L420-Catalina/blob/main/tw-11134207-7r98o-lw75tbtzwze811.webp)
+![image](https://github.com/tssin/Lenvo-L420-Catalina/blob/main/L420.gif)
 CPU	Intel Core i5-2450M
 GPU	Intel HD Graphics 3000
