--- a/Readme
+++ b/Readme
@@ -1,5 +1,3 @@
-![image](https://github.com/tssin/Lenvo-L420-Catalina/blob/main/L420.gif "image")  
-![Cow3](https://github.com/tssin/Lenvo-L420-Catalina/blob/main/L420.gif?raw=true 'Cow3')
-![Cow4](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina/blob/main/L420.gif "Cow4") 
+![](tssin/Lenvo-L420-Catalina/blob/main/L420.gif) 
 CPU	Intel Core i5-2450M
 GPU	Intel HD Graphics 3000
