--- a/Readme
+++ b/Readme
@@ -1,3 +1,2 @@
 CPU	Intel Core i5-2450M  
-GPU	Intel HD Graphics 3000  
-*/ ![] (https://github.com/tssin/Lenvo-L420-Catalina/blob/main/L420.gif)  
+![image] (https://github.com/tssin/Lenvo-L420-Catalina/blob/main/L420.gif)  
