--- a/Readme
+++ b/Readme
@@ -1,1 +1,1 @@
-![](https://github.com/tssin/Lenvo-L420-Catalina-OC/blob/main/L420.gif)
+![image 1](https://github.com/tssin/Lenvo-L420-Catalina-OC/blob/main/L420.gif)
