--- a/Readme
+++ b/Readme
@@ -1,4 +1,5 @@
 ![image](https://github.com/tssin/Lenvo-L420-Catalina-OC/blob/main/L420.gif)
+![screenshot](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)  
 
 ● DISCLAIMER：
 CPU i5-2450m  
