--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-![image](L420.gif)  
+![image](/L420.gif)  
 
 ![screenshot](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)  
 
