--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
-![image](./L420.gif)  
 
+![screen](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)
 ![screenshot](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)  
 
 ● DISCLAIMER：
