--- a/Readme
+++ b/Readme
@@ -3,7 +3,7 @@
 <picture>
  <source media="(prefers-color-scheme: dark)" srcset="https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif">
  <source media="(prefers-color-scheme: light)" srcset="https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif">
- <img alt="YOUR-ALT-TEXT" src="YOUR-DEFAULT-IMAGE">
+ <img alt="YOUR-ALT-TEXT" src="https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif">
 </picture>
 
 ● DISCLAIMER：
