--- a/Readme
+++ b/Readme
@@ -1,9 +1,8 @@
 ![screen](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)
 
-<picture>
- <img alt="YOUR-ALT-TEXT" src="https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif">
-</picture>
 
 ● DISCLAIMER：
 CPU i5-2450m  
+Ram 8GB  
+iGPU  Intel HD3000
 
