--- a/Readme
+++ b/Readme
@@ -1,4 +1,6 @@
 ![screen](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)
+![image](https://github.com/tssin/HP-Pavilion-G6-1006TX-OC-0.9.0/blob/main/HPG6.gif)
+
 
 ● DISCLAIMER：
 CPU i5-2450m  
