--- a/Readme
+++ b/Readme
@@ -1,6 +1,4 @@
-![screen](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)
-![image](https://github.com/tssin/HP-Pavilion-G6-1006TX-OC-0.9.0/blob/main/HPG6.gif)
-
+![image](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)
 
 ● DISCLAIMER：
 CPU i5-2450m  
