--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-![image](https://raw.githubusercontent.com/tssin/Lenvo-L420-Catalina-OC/main/L420.gif)
+![image](L420.gif)
 
 ● DISCLAIMER：
 CPU i5-2450m  
