--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-![image](https://github.com/tssin/Lenvo-L420-Catalina-OC/raw/main/L420.gif)
+![image](https://github.com/tssin/Lenvo-L420-Catalina-OC/raw/main/L420.gif "image")
 
 ● DISCLAIMER：
 CPU i5-2450m  
