--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
-![image](https://github.com/tssin/Lenvo-L420-Catalina-OC/raw/main/L420.gif "image")
-
+![image](https://github.com/tssin/Lenvo-L420-Catalina-OC/blob/main/L420.gif?raw=true "image")
+![Cow3](https://github.com/jmszwzr/test/blob/master/images/sex-cow.png?raw=true 'Cow3')
 ● DISCLAIMER：
 CPU i5-2450m  
 Ram 8GB  
